updated sort icons styles

--- a/findly-builder/src/app/components/dashboard/dashboard.component.html
+++ b/findly-builder/src/app/components/dashboard/dashboard.component.html
@@ -236,8 +236,13 @@
                             <div class="table_header row m-0">
                                 <div class="col-10 header-title pl-0">{{'metrics.dash_board_view.Searched_Intent'|
                                     translate}}</div>
-                                <div class="col-2 header-title text-right"><img src="assets/icons/sort_up_down.svg">
-                                    {{'metrics.dash_board_view.Count'| translate}}</div>
+                                <div class="col-2 header-title text-right">
+                                    <span class="d-flex align-items-center flex-column mr-1">
+                                        <img src="assets/icons/caretDown.svg" class="sortImg downArrow">
+                                        <img src="assets/icons/caretDown.svg" class="sortImg upArrow">
+                                    </span>
+                                    {{'metrics.dash_board_view.Count'| translate}}
+                                </div>
                             </div>
                             <div *ngIf="mostSearchedQuries">
                                 <div class="table_body row m-0" *ngFor="let top of mostSearchedQuries;let i = index">
@@ -260,8 +265,13 @@
                             <div class="table_header row m-0">
                                 <div class="col-10 header-title  pl-0">{{'metrics.dash_board_view.Searched_Intent'|
                                     translate}}</div>
-                                <div class="col-2 header-title text-right"><img src="assets/icons/sort_up_down.svg">
-                                    {{'metrics.dash_board_view.Count'| translate}}</div>
+                                <div class="col-2 header-title text-right">
+                                    <span class="d-flex align-items-center flex-column mr-1">
+                                        <img src="assets/icons/caretDown.svg" class="sortImg downArrow">
+                                        <img src="assets/icons/caretDown.svg" class="sortImg upArrow">
+                                    </span>
+                                    {{'metrics.dash_board_view.Count'| translate}}
+                                </div>
                             </div>
                             <div *ngIf="topQuriesWithNoResults">
                                 <div class="table_body row m-0"
@@ -307,22 +317,42 @@
                         <div class="title-card">{{'metrics.dash_board_view.Top_Search_Results'| translate}} </div>
                         <div class="table-content-data">
                             <div class="table_header row m-0">
-                                <div class="col-4 header-title  pl-0"><img
-                                        src="assets/icons/sort_up_down.svg">{{'metrics.dash_board_view.Searched_Intent'|
-                                    translate}}</div>
+                                <div class="col-4 header-title  pl-0">
+                                    <span class="d-flex align-items-center flex-column mr-1">
+                                        <img src="assets/icons/caretDown.svg" class="sortImg downArrow">
+                                        <img src="assets/icons/caretDown.svg" class="sortImg upArrow">
+                                    </span>
+                                    {{'metrics.dash_board_view.Searched_Intent'|translate}}
+                                </div>
                                 <!-- <div class="col-1 header-title text-right"><img src="assets/icons/sort_up_down.svg"></div> -->
-                                <div class="col-2 header-title"><img src="assets/icons/sort_up_down.svg">
-                                    {{'metrics.dash_board_view.Appearances'| translate}}</div>
-                                <div class="col-2 header-title"><img
-                                        src="assets/icons/sort_up_down.svg">{{'metrics.dash_board_view.Clicks'|
-                                    translate}}</div>
-                                <div class="col-2 header-title"><img
-                                        src="assets/icons/sort_up_down.svg">{{'metrics.dash_board_view.ctr'| translate}}
+                                <div class="col-2 header-title">
+                                    <span class="d-flex align-items-center flex-column mr-1">
+                                        <img src="assets/icons/caretDown.svg" class="sortImg downArrow">
+                                        <img src="assets/icons/caretDown.svg" class="sortImg upArrow">
+                                    </span>
+                                    {{'metrics.dash_board_view.Appearances'| translate}}
+                                </div>
+                                <div class="col-2 header-title">
+                                    <span class="d-flex align-items-center flex-column mr-1">
+                                        <img src="assets/icons/caretDown.svg" class="sortImg downArrow">
+                                        <img src="assets/icons/caretDown.svg" class="sortImg upArrow">
+                                    </span>
+                                    {{'metrics.dash_board_view.Clicks'| translate}}
+                                </div>
+                                <div class="col-2 header-title">
+                                    <span class="d-flex align-items-center flex-column mr-1">
+                                        <img src="assets/icons/caretDown.svg" class="sortImg downArrow">
+                                        <img src="assets/icons/caretDown.svg" class="sortImg upArrow">
+                                    </span>
+                                    {{'metrics.dash_board_view.ctr'| translate}}
                                 </div>
                                 <!--  ngbTooltip='Click-Through Rate' -->
-                                <div class="col-2 header-title"><img
-                                        src="assets/icons/sort_up_down.svg">{{'metrics.dash_board_view.Avg_Position'|
-                                    translate}}</div>
+                                <div class="col-2 header-title">
+                                    <span class="d-flex align-items-center flex-column mr-1">
+                                        <img src="assets/icons/caretDown.svg" class="sortImg downArrow">
+                                        <img src="assets/icons/caretDown.svg" class="sortImg upArrow">
+                                    </span>{{'metrics.dash_board_view.Avg_Position'| translate}}
+                                </div>
                                 <!-- <div class="col-1 header-title text-center"><img src="assets/icons/pos-thumb.svg"></div>
                                 <div class="col-1 header-title text-center"><img src="assets/icons/neg-thumb.svg"></div> -->
                                 <!-- <div class="col-2 header-title text-right"><img src="assets/icons/sort_up_down.svg">
