--- a/findly-builder/src/app/components/result-insights/result-insights.component.html
+++ b/findly-builder/src/app/components/result-insights/result-insights.component.html
@@ -62,38 +62,38 @@
                 </div>       -->
                 <div class="table_data_content">
                     <div class="table_header row m-0">
-                        <div class="col-4 title">
+                        <div class="col-4 title" (click)="sortByApi('SearchQueriesForResult','answer')">
                             <span class="d-flex align-items-center flex-column mr-1">
-                                <img src="assets/icons/caretDown.svg" class="sortImg downArrow">
-                                <img src="assets/icons/caretDown.svg" class="sortImg upArrow">
+                                <img src="assets/icons/caretDown.svg" (click)="getSortIconVisibility('answer','asc')" class="sortImg downArrow">
+                                <img src="assets/icons/caretDown.svg" (click)="getSortIconVisibility('answer','desc')" class="sortImg upArrow">
                             </span>
                             {{'metrics.result_insights.Search_Results'| translate}}
                         </div>
-                        <div class="col-2 title">
+                        <div class="col-2 title" (click)="sortByApi('SearchQueriesForResult','appearances')">
                             <span class="d-flex align-items-center flex-column mr-1">
-                                <img src="assets/icons/caretDown.svg" class="sortImg downArrow">
-                                <img src="assets/icons/caretDown.svg" class="sortImg upArrow">
+                                <img src="assets/icons/caretDown.svg" (click)="getSortIconVisibility('appearances','asc')" class="sortImg downArrow">
+                                <img src="assets/icons/caretDown.svg" (click)="getSortIconVisibility('appearances','desc')" class="sortImg upArrow">
                             </span>
                             {{'metrics.result_insights.Appearances'| translate}}
                         </div>
-                        <div class="col-2 title">
+                        <div class="col-2 title" (click)="sortByApi('SearchQueriesForResult','clicks')">
                             <span class="d-flex align-items-center flex-column mr-1">
-                                <img src="assets/icons/caretDown.svg" class="sortImg downArrow">
-                                <img src="assets/icons/caretDown.svg" class="sortImg upArrow">
+                                <img src="assets/icons/caretDown.svg" (click)="getSortIconVisibility('clicks','asc')" class="sortImg downArrow">
+                                <img src="assets/icons/caretDown.svg" (click)="getSortIconVisibility('clicks','desc')" class="sortImg upArrow">
                             </span>
                             {{'metrics.result_insights.No_of_Clicks'| translate}}
                         </div>
-                        <div class="col-2 title">
+                        <div class="col-2 title" (click)="sortByApi('SearchQueriesForResult','clickThroughRate')">
                             <span class="d-flex align-items-center flex-column mr-1">
-                                <img src="assets/icons/caretDown.svg" class="sortImg downArrow">
-                                <img src="assets/icons/caretDown.svg" class="sortImg upArrow">
+                                <img src="assets/icons/caretDown.svg" (click)="getSortIconVisibility('clickThroughRate','asc')" class="sortImg downArrow">
+                                <img src="assets/icons/caretDown.svg"  (click)="getSortIconVisibility('clickThroughRate','desc')" class="sortImg upArrow">
                             </span>
                             {{'metrics.result_insights.Click-Through_Rate'| translate}}
                         </div>
-                        <div class="col-2 title d-flex">
+                        <div class="col-2 title d-flex" (click)="sortByApi('SearchQueriesForResult','avgPosition')">
                             <span class="d-flex align-items-center flex-column mr-1">
-                                <img src="assets/icons/caretDown.svg" class="sortImg downArrow">
-                                <img src="assets/icons/caretDown.svg" class="sortImg upArrow">
+                                <img src="assets/icons/caretDown.svg" (click)="getSortIconVisibility('avgPosition','asc')" class="sortImg downArrow">
+                                <img src="assets/icons/caretDown.svg"  (click)="getSortIconVisibility('avgPosition','desc')" class="sortImg upArrow">
                             </span>
                             <span>{{'metrics.result_insights.Avg_Position'| translate}}</span>
                         </div>
