--- a/findly-builder/src/app/components/search-insights/search-insights.component.html
+++ b/findly-builder/src/app/components/search-insights/search-insights.component.html
@@ -62,23 +62,23 @@
                         <div id="querieswithresults" class="tab-pane tab-data-content " [ngClass]="{'active show': querieswithresults }">
                             <div class="table_data_content">
                                 <div class="table_header row m-0">
-                                    <div class="col-8 title">
+                                    <div class="col-8 title" click)="sortByApi('QueriesWithResults','query')">
                                         <span class="d-flex align-items-center flex-column mr-1">
-                                            <img src="assets/icons/caretDown.svg" class="sortImg downArrow">
-                                            <img src="assets/icons/caretDown.svg" class="sortImg upArrow">
+                                            <img src="assets/icons/caretDown.svg" (click)="getSortIconVisibility('query','asc')"class="sortImg downArrow">
+                                            <img src="assets/icons/caretDown.svg" (click)="getSortIconVisibility('query','desc')" class="sortImg upArrow">
                                         </span>
                                         {{'metrics.search_insights.Search_results'| translate}} 
                                     </div>
-                                    <div class="col-2 title">
+                                    <div class="col-2 title" (click)="sortByApi('QueriesWithResults','searches')">
                                         <span class="d-flex align-items-center flex-column mr-1">
-                                            <img src="assets/icons/caretDown.svg" class="sortImg downArrow">
-                                            <img src="assets/icons/caretDown.svg" class="sortImg upArrow">
+                                            <img src="assets/icons/caretDown.svg" (click)="getSortIconVisibility('searches','asc')" class="sortImg downArrow">
+                                            <img src="assets/icons/caretDown.svg" (click)="getSortIconVisibility('searches','desc')" class="sortImg upArrow">
                                         </span>
                                         {{'metrics.search_insights.Count'| translate}} <span class="info-icon" placement="top-center" ngbTooltip="Number of times the query was searched for by the end-users" [container]="'body'" tooltipClass="dashboard-custom-tooltips" class="pl-1"><img src="assets/icons/Info_gray.svg"></span></div>
-                                    <div class="col-2 title">
+                                    <div class="col-2 title" click)="sortByApi('QueriesWithResults','count')">
                                         <span class="d-flex align-items-center flex-column mr-1">
-                                            <img src="assets/icons/caretDown.svg" class="sortImg downArrow">
-                                            <img src="assets/icons/caretDown.svg" class="sortImg upArrow">
+                                            <img src="assets/icons/caretDown.svg" (click)="getSortIconVisibility('count','asc')" class="sortImg downArrow">
+                                            <img src="assets/icons/caretDown.svg" (click)="getSortIconVisibility('count','asc')" class="sortImg upArrow">
                                         </span>
                                         {{'metrics.search_insights.No_of_Clicks'| translate}} <span class="info-icon" placement="top-center" ngbTooltip="Number of times where at least one result of the query was clicked on by the end-users" [container]="'body'" tooltipClass="dashboard-custom-tooltips" class="pl-1"><img src="assets/icons/Info_gray.svg"></span></div>
                                 </div>
@@ -99,17 +99,17 @@
                         <div id="querieswithoutresults" class="tab-pane fade tab-data-content" [ngClass]="{'active show': !querieswithresults }">
                             <div class="table_data_content">
                                 <div class="table_header row m-0">
-                                    <div class="col-10 title">
+                                    <div class="col-10 title" (click)="sortByApi('QueriesWithNoResults','query')">
                                         <span class="d-flex align-items-center flex-column mr-1">
-                                            <img src="assets/icons/caretDown.svg" class="sortImg downArrow">
-                                            <img src="assets/icons/caretDown.svg" class="sortImg upArrow">
+                                            <img src="assets/icons/caretDown.svg"  (click)="getSortIconVisibility('query','asc')" class="sortImg downArrow">
+                                            <img src="assets/icons/caretDown.svg" (click)="getSortIconVisibility('query','desc')" class="sortImg upArrow">
                                         </span>
                                         {{'metrics.search_insights.Search_results'| translate}}</div>
                                     <!-- <div class="col-2 title"><img src="assets/icons/sort_up_down.svg" class="mr-1">Appearances <span class="info-icon" placement="top-center" ngbTooltip="Use key board shortcuts" [container]='"body"' tooltipClass="metrics_tooltips m-0"><img src="assets/icons/Info_gray.svg"></span></div> -->
-                                    <div class="col-2 title">
+                                    <div class="col-2 title" (click)="sortByApi('QueriesWithNoResults','count')">
                                         <span class="d-flex align-items-center flex-column mr-1">
-                                            <img src="assets/icons/caretDown.svg" class="sortImg downArrow">
-                                            <img src="assets/icons/caretDown.svg" class="sortImg upArrow">
+                                            <img src="assets/icons/caretDown.svg" (click)="getSortIconVisibility('count','asc')" class="sortImg downArrow">
+                                            <img src="assets/icons/caretDown.svg" (click)="getSortIconVisibility('count','desc')" class="sortImg upArrow">
                                         </span>
                                         {{'metrics.search_insights.Count'| translate}} <span class="info-icon" placement="top-center" ngbTooltip="Number of times the query was searched for by the end-users" [container]="'body'" tooltipClass="dashboard-custom-tooltips" class="pl-1"><img src="assets/icons/Info_gray.svg"></span></div>
                                 </div>
